# llm-sql-assistant

./: .gitignore  README.md  pyproject.toml  ruff.toml
data/: eval_examples.jsonl
scripts/: check_sql.py  create_demo_db.py  run_eval.py
src/llm_sql_assistant/: __init__.py  evaluation.py  sql_guardrails.py  sql_runner.py
tests/: test_evaluation.py  test_guardrails.py  test_sql_runner.py
